docs: document BESEC-18 security hardening and JDK25/Docker test harness in CLAUDE.md
- Add "Security Hardening (BESEC-18)" section: SafeObjectInputStream allowlist
  filter, the -Dbe.contribution.deserialization.allowlist escape hatch, MQTT-JSON
  wire-format change, and the ES TLS hostname-verification fix.
- Update the Testing section for running Testcontainers on a modern JDK/Docker:
  api.version system property, BE --add-opens argLine, testcontainers 1.20.4,
  and the environment-limited redis / aws-catalog real-AWS integration tests.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>